--- a/prueba_novey.html
+++ b/prueba_novey.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
 <head>
 <title>Page 1</title>
@@ -5,33 +6,41 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <style type="text/css" data-inline="true">
 <!--
-	p {margin: 0; padding: 0;}	.ft00{font-size:16px;font-family:HIWXQT+ArialMT;color:#13100e;}
-	.ft01{font-size:16px;font-family:HIWXQT+ArialMT;color:#3c4ba7;}
-	.ft02{font-size:16px;font-family:HIWXQT+Arial;color:#13100e;}
-	.ft03{font-size:16px;font-family:HIWXQT+Arial;color:#49576d;}
-	.ft04{font-size:16px;font-family:HIWXQT+Arial;color:#3c4ba7;}
+	p {margin: 0; padding: 0;}	.ft00{font-size:16px;font-family:SSCLOX+ArialMT;color:#49576d;}
+	.ft01{font-size:16px;font-family:SSCLOX+ArialMT;color:#3c4ba7;}
+	.ft02{font-size:16px;font-family:SSCLOX+Arial;color:#37404f;}
+	.ft03{font-size:16px;font-family:SSCLOX+Arial;color:#49576d;}
+	.ft04{font-size:16px;font-family:SSCLOX+Arial;color:#3c4ba7;}
 -->
 </style>
 </head>
 <body bgcolor="#A0A0A0" vlink="blue" link="blue">
 <div id="page1-div" style="position:relative;width:918px;height:1188px;">
-<img width="918" height="1188" src="Email_Novey001.png" alt="background image"/>
-<p style="position:absolute;top:300px;left:162px;white-space:nowrap" class="ft00">Hola &lt;Nombre del cliente o empresa,&gt;</p>
-<p style="position:absolute;top:342px;left:162px;white-space:nowrap" class="ft00">Adjunto encontrarás el estado de cuenta de&#160;tu línea de crédito correspondiente al&#160;</p>
-<p style="position:absolute;top:362px;left:162px;white-space:nowrap" class="ft00">mes de&#160;Abril 2023.</p>
-<p style="position:absolute;top:401px;left:162px;white-space:nowrap" class="ft00">Recuerda realizar tus pagos antes de finalizar el mes para evitar incurrir en intereses&#160;</p>
-<p style="position:absolute;top:421px;left:162px;white-space:nowrap" class="ft00">moratorios.</p>
-<p style="position:absolute;top:461px;left:162px;white-space:nowrap" class="ft00">Agradecemos envíes el comprobante de pago&#160;y&#160;el&#160;detalle&#160;de&#160;las&#160;facturas&#160;que&#160;se&#160;</p>
-<p style="position:absolute;top:480px;left:162px;white-space:nowrap" class="ft00">deben aplicar al correo&#160;</p>
-<p style="position:absolute;top:480px;left:334px;white-space:nowrap" class="ft01">atencion.clientescredito@cochezycia.com</p>
-<p style="position:absolute;top:520px;left:162px;white-space:nowrap" class="ft00">Ponemos a tu disposición las siguientes opciones para realizar el pago:</p>
-<p style="position:absolute;top:540px;left:162px;white-space:nowrap" class="ft00">&#160;</p>
-<p style="position:absolute;top:560px;left:189px;white-space:nowrap" class="ft00">▪&#160;Centro de pagos en las sucursales&#160;de Cochez a nivel nacional</p>
-<p style="position:absolute;top:579px;left:189px;white-space:nowrap" class="ft00">▪&#160;Yappy, búscanos en el directorio como @Cochez</p>
-<p style="position:absolute;top:599px;left:189px;white-space:nowrap" class="ft00">▪&#160;Banca en Línea de Banco General, opción pagos a proveedores, buscar&#160;</p>
-<p style="position:absolute;top:619px;left:216px;white-space:nowrap" class="ft00">COCHEZ&#160;Y&#160;CIA, S.A. en la opción&#160;pago.&#160;Anotar número de cliente Cochez&#160;</p>
-<p style="position:absolute;top:639px;left:216px;white-space:nowrap" class="ft00">en la sección referencia</p>
-<p style="position:absolute;top:975px;left:217px;white-space:nowrap" class="ft04"><b>atencion.clientescredito@cochezycia.com</b></p>
+<img width="918" height="1188" src="https://github.com/sebastianquispe15/Reporte_EECC/blob/main/Email_Novey001.png?raw=true" alt="background image"/>
+<p style="position:absolute;top:309px;left:162px;white-space:nowrap" class="ft00">Hola &lt;Nombre del cliente o empresa,&gt;</p>
+<p style="position:absolute;top:351px;left:162px;white-space:nowrap" class="ft00">Adjunto encontrarás el estado de cuenta de&#160;tu línea de crédito correspondiente al&#160;</p>
+<p style="position:absolute;top:371px;left:162px;white-space:nowrap" class="ft00">mes de&#160;Abril 2023.</p>
+<p style="position:absolute;top:410px;left:162px;white-space:nowrap" class="ft00">Recuerda realizar tus pagos antes de finalizar el mes para evitar incurrir en intereses&#160;</p>
+<p style="position:absolute;top:430px;left:162px;white-space:nowrap" class="ft00">moratorios.</p>
+<p style="position:absolute;top:470px;left:162px;white-space:nowrap" class="ft00">Agradecemos envíes el comprobante de pago&#160;y&#160;el&#160;detalle&#160;de&#160;las&#160;facturas&#160;que&#160;se&#160;</p>
+<p style="position:absolute;top:489px;left:162px;white-space:nowrap" class="ft00">deben aplicar al correo&#160;</p>
+<p style="position:absolute;top:489px;left:335px;white-space:nowrap" class="ft01">atencion.clientescredito@cochezycia.com</p>
+<p style="position:absolute;top:529px;left:162px;white-space:nowrap" class="ft00">Ponemos a tu disposición las siguientes opciones para realizar el pago:</p>
+<p style="position:absolute;top:549px;left:162px;white-space:nowrap" class="ft00">&#160;</p>
+<p style="position:absolute;top:569px;left:189px;white-space:nowrap" class="ft00">▪&#160;Centro de pagos en las sucursales&#160;Novey a nivel nacional.</p>
+<p style="position:absolute;top:588px;left:189px;white-space:nowrap" class="ft00">▪&#160;Yappy, búscanos en el directorio como @Novey</p>
+<p style="position:absolute;top:608px;left:189px;white-space:nowrap" class="ft00">▪&#160;Banca en Línea de Banco General, opción pagos a proveedores, buscar&#160;</p>
+<p style="position:absolute;top:628px;left:216px;white-space:nowrap" class="ft00">GEO&#160;F.&#160;NOVEY,&#160;INC. en la opción&#160;pago.&#160;Anotar&#160;número de cliente Novey&#160;</p>
+<p style="position:absolute;top:648px;left:216px;white-space:nowrap" class="ft00">en la sección referencia.</p>
+<p style="position:absolute;top:668px;left:189px;white-space:nowrap" class="ft00">▪&#160;ACH cuenta corriente 03-01-01-001455-9 Banco General a nombre de&#160;</p>
+<p style="position:absolute;top:687px;left:216px;white-space:nowrap" class="ft00">GEO F. NOVEY, INC.</p>
+<p style="position:absolute;top:707px;left:189px;white-space:nowrap" class="ft00">▪&#160;Depósito en cualquier&#160;sucursal de&#160;Banco&#160;General&#160;cuenta&#160;corriente&#160;</p>
+<p style="position:absolute;top:727px;left:216px;white-space:nowrap" class="ft00">03-01-01-001455-9 a nombre de GEO F. NOVEY, INC.</p>
+<p style="position:absolute;top:925px;left:162px;white-space:nowrap" class="ft02"><b>Agradecemos&#160;no contestar este correo, en caso de tener alguna consulta&#160;</b></p>
+<p style="position:absolute;top:945px;left:162px;white-space:nowrap" class="ft02"><b>por favor comunícate a nuestro Centro de atención al cliente al 302-4444 o al&#160;</b></p>
+<p style="position:absolute;top:965px;left:162px;white-space:nowrap" class="ft02"><b>correo</b></p>
+<p style="position:absolute;top:965px;left:213px;white-space:nowrap" class="ft03"><b>&#160;</b></p>
+<p style="position:absolute;top:965px;left:218px;white-space:nowrap" class="ft04"><b>atencion.clientescredito@cochezycia.com</b></p>
 </div>
 </body>
 </html>
